Doctor and Patient registration, update and view added with location support